<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryLight">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"/>

            <!--            <ImageView
                            android:id="@+id/ivArrowBack"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_margin="@dimen/margin_padding_size_medium"
                            android:tint="@color/colorPrimary"
                            android:src="@drawable/ic_arrow_back"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.SearchView
                            android:id="@+id/searchView"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_marginStart="@dimen/margin_padding_size_medium"
                            android:tint="@color/colorPrimary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_marginTop="@dimen/margin_padding_size_small"
                            android:gravity="center"
                            android:text="@string/app_title"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/text_size_title"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@id/ivProfile"
                            app:layout_constraintStart_toEndOf="@id/searchView"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/ivProfile"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_marginEnd="@dimen/margin_padding_size_medium"
                            android:text="Sign out"
                            app:layout_constraintEnd_toStartOf="@id/ivStar"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                        <ImageView
                            android:id="@+id/ivStar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_star"
                            android:tint="@color/colorPrimary"
                            android:layout_marginEnd="@dimen/margin_padding_size_small"
                            app:layout_constraintEnd_toStartOf="@id/ivMore"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                        <ImageView
                            android:id="@+id/ivMore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_more_vert"
                            android:tint="@color/colorPrimary"
                            android:layout_marginEnd="@dimen/margin_padding_size_medium"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/ivCategory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_padding_size_small"
        android:background="@drawable/card_background"
        app:layout_constraintBottom_toTopOf="@id/ivSource"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1" />

    <ImageView
        android:id="@+id/ivCategoryPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="@id/tvCategorySubscribe"
        app:layout_constraintDimensionRatio="V,1:1"
        app:layout_constraintEnd_toEndOf="@id/ivCategory"
        app:layout_constraintTop_toTopOf="@id/tvCategoryDescription" />

    <TextView
        android:id="@+id/tvCategoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:text="@string/categories"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/ivCategory"
        app:layout_constraintTop_toTopOf="@id/ivCategory" />

    <TextView
        android:id="@+id/tvCategoryDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:text="@string/categories_description"
        android:textSize="@dimen/text_size_body1"
        app:layout_constraintBottom_toTopOf="@id/tvCategorySubscribe"
        app:layout_constraintEnd_toStartOf="@id/ivCategoryPhoto"
        app:layout_constraintStart_toStartOf="@id/ivCategory"
        app:layout_constraintTop_toBottomOf="@id/tvCategoryTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategorySubscribesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_padding_size_medium"
        app:layout_constraintTop_toBottomOf="@id/tvCategoryTitle"
        app:layout_constraintBottom_toTopOf="@id/tvCategorySubscribe"/>

    <TextView
        android:id="@+id/tvCategorySubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:text="@string/categories_subscribe"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_body2"
        app:layout_constraintBottom_toBottomOf="@id/ivCategory"
        app:layout_constraintStart_toStartOf="@id/ivCategory"
        app:layout_constraintTop_toBottomOf="@id/tvCategoryDescription" />

    <ImageView
        android:id="@+id/ivSource"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/card_background"
        app:layout_constraintBottom_toTopOf="@id/ivSaved"
        app:layout_constraintTop_toBottomOf="@id/ivCategory"
        app:layout_constraintVertical_weight="1" />

    <ImageView
        android:id="@+id/ivSourcePhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="@id/tvSourceSubscribe"
        app:layout_constraintDimensionRatio="V,1:1"
        app:layout_constraintEnd_toEndOf="@id/ivSource"
        app:layout_constraintTop_toTopOf="@id/tvSourceDescription" />

    <TextView
        android:id="@+id/tvSourceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:text="@string/sources"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/ivSource"
        app:layout_constraintTop_toTopOf="@id/ivSource" />

    <TextView
        android:id="@+id/tvSourceDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:text="@string/sources_description"
        android:textSize="@dimen/text_size_body1"
        app:layout_constraintBottom_toTopOf="@id/tvSourceSubscribe"
        app:layout_constraintEnd_toStartOf="@id/ivSourcePhoto"
        app:layout_constraintStart_toStartOf="@id/ivSource"
        app:layout_constraintTop_toBottomOf="@id/tvSourceTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSourceSubscribesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_padding_size_medium"
        app:layout_constraintTop_toBottomOf="@id/tvSourceTitle"
        app:layout_constraintBottom_toTopOf="@id/tvSourceSubscribe"/>

    <TextView
        android:id="@+id/tvSourceSubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:text="@string/sources_subscribe"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_body2"
        app:layout_constraintBottom_toBottomOf="@id/ivSource"
        app:layout_constraintStart_toStartOf="@id/ivSource"
        app:layout_constraintTop_toBottomOf="@id/tvSourceDescription" />

    <ImageView
        android:id="@+id/ivSaved"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_padding_size_small"
        android:background="@drawable/card_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSource"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/tvSavedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:text="@string/saved"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/ivSaved"
        app:layout_constraintTop_toTopOf="@id/ivSaved" />

    <TextView
        android:id="@+id/tvSavedDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:text="@string/saved_description"
        android:textSize="@dimen/text_size_body1"
        app:layout_constraintBottom_toBottomOf="@id/ivSaved"
        app:layout_constraintStart_toStartOf="@id/ivSaved"
        app:layout_constraintTop_toBottomOf="@id/tvSavedTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSavedArticlesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_article"
        android:layout_margin="@dimen/margin_padding_size_medium"
        app:layout_constraintTop_toBottomOf="@id/tvSavedTitle"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddSubscription"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_add"
        android:layout_margin="@dimen/margin_padding_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>