<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackground">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchView"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_marginStart="@dimen/margin_padding_size_medium"
                        android:tint="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_marginTop="@dimen/margin_padding_size_small"
                        android:gravity="center"
                        android:text="@string/app_title"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@id/ivProfile"
                        app:layout_constraintStart_toEndOf="@id/searchView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="@dimen/margin_padding_size_medium"
                        android:src="@mipmap/ic_launcher"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCovedNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_size_medium"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/margin_padding_size_medium"
                app:layout_constraintTop_toBottomOf="@id/appBarLayout">

                <TextView
                    android:id="@+id/tvCovidNewsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/covid_news_title"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_body1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvCovidNewsDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/covid_news_description"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_body1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/ivArrowMore"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCovidNewsTitle" />

                <ImageView
                    android:id="@+id/ivArrowMore"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_margin="@dimen/margin_padding_size_small"
                    android:src="@drawable/ic_arrow_forward"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/clCovedNews"
                    app:layout_constraintEnd_toEndOf="@id/clCovedNews"
                    app:layout_constraintTop_toTopOf="@id/clCovedNews"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvHotTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:fontFamily="monospace"
                android:text="@string/hot_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clCovedNews" />

            <TextView
                android:id="@+id/tvHotDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:text="@string/hot_description"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHotTitle" />

            <ImageView
                android:id="@+id/ivWeatherIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/tvHotDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvHotTitle"
                tools:ignore="ContentDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNewsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvHotDescription"
                tools:listitem="@layout/item_article" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>